gccida/c1/find_splittable_regs
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:2972:54: error: must use 'enum' tag to refer to type 'unroll_types'
int  find_splittable_regs( const  struct loop *loop, unroll_types unroll_type, int unroll_number) 
                                                     ^
                                                     enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:2985:1: error: must use 'enum' tag to refer to type 'unroll_types'
unroll_types v15; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:2986:1: error: use of undeclared identifier 'induction_1'
induction_1 *i; // r12 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:2986:14: error: use of undeclared identifier 'i'
induction_1 *i; // r12 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:2996:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv; // rax 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:2996:14: error: use of undeclared identifier 'biv'; did you mean 'div'?
induction_1 *biv; // rax 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:3042:7: error: use of undeclared identifier 'i'
for ( i = v3->biv; i; i = i->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:3042:20: error: use of undeclared identifier 'i'
for ( i = v3->biv; i; i = i->next_iv ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:3042:23: error: use of undeclared identifier 'i'
for ( i = v3->biv; i; i = i->next_iv ) 
                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:3042:27: error: use of undeclared identifier 'i'
for ( i = v3->biv; i; i = i->next_iv ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:3044:8: error: use of undeclared identifier 'i'
insn = i->insn; 
       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:3045:27: error: use of undeclared identifier 'i'
if ( rtx_class[*( _WORD *)i->insn] == 105 ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:3047:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v18 = ( rtx)insn[2]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:3052:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v19.rtwint = ( __int64)v18->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:3108:1: error: use of undeclared identifier 'biv'
biv = v3->biv; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:3111:20: error: use of undeclared identifier 'biv'
v27 = gen_reg_rtx( biv->mode); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/unroll.c:3127:21: error: use of undeclared identifier 'biv'
v7 = gen_move_insn( biv->src_reg, y); 
                    ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_splittable_regs/src/obj/unroll.o] Error 1
